--- a/css/style.css
+++ b/css/style.css
@@ -5704,7 +5704,7 @@ opacity:1;
     top: 50%;
     left: 0;
     background-color: #111;
-    color: #fff;
+    color: #fff!important;
     font-size: 1.2em;
     width:30px;
     height:50px;
@@ -7037,7 +7037,9 @@ left:0!important;
 .right-side footer{
   padding-right:0;
 }
-
+.mobile-menu-active .header-pan-icon{
+  display: none;
+}
 
 }
 
@@ -7465,5 +7467,13 @@ margin-right:0.5rem;
 }
 .slider-content-caption6 a.slide-btn {
     margin-bottom: 1rem;
+}
+aside.m-shop-sidebar{
+    max-width: 18rem;
+    left: -18rem;
+}
+
+.side-pan-active .header-pan-icon a {
+    left: 18rem;
 }
 }
