--- a/css/style.css
+++ b/css/style.css
@@ -6962,6 +6962,92 @@ font-size:1.8rem;
 text-decoration: underline !important;
 }
 
+
+
+/*th product compare plugin integration */
+.woocommerce .entry-summary a.th-product-compare-btn.btn_type:before {
+    content: "\f021";
+    font-family: FontAwesome;
+    display: block;
+    color: #9c9c9c;
+    font-size: 1rem;
+}
+.woocommerce .entry-summary a.th-product-compare-btn.btn_type {
+    border: 1px solid;
+    border-radius: 0;
+    color: #9c9c9c;
+    display: inline-block;
+    font-size: 0;
+    height: 45px;
+    padding-top: 12px;
+    width: 45px;
+    background: transparent;
+    text-align: center;
+    margin-left: 0.5rem;
+    font-weight: normal;
+    min-width: auto;
+}
+.woocommerce .entry-summary .th-product-compare-btn {
+    margin: 0;
+    }
+
+.woocommerce .entry-summary .th-product-compare-btn-wrap {
+    display: inline-block;
+}   
+
+
+.woocommerce .entry-summary a.th-product-compare-btn.btn_type.loading:before{
+-webkit-animation: spin 1s linear infinite;
+  animation: spin 1s linear infinite;
+} 
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
+
+
+
+/*th-compare-button animation */
+.thunk-woo-product-list .thunk-compare .compare-button a.loading:before{
+-webkit-animation: spin 1s linear infinite;
+  animation: spin 1s linear infinite;
+}
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.woocommerce ul.products li .thunk-compare .compare-button a.loading:before{
+  -webkit-animation: spin 1s linear infinite;
+  animation: spin 1s linear infinite;
+}
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.woocommerce a.button.th-product-compare-btn.loading::after{
+  display: none;
+}
+
+
+
+
 @media screen and (max-width: 1250px){
   #search-box #search-button {
   padding: 0 2rem;
