th all in one woo cart plugin fly cart class added

--- a/css/style.css
+++ b/css/style.css
@@ -5682,7 +5682,7 @@ opacity:1;
     right: 0;
     bottom: 0;
     background-color:#f5f5f5;
-    z-index: 99999;
+    z-index: 99999999999;
     height: 100%;
     width: 100%;
     overflow: hidden !important;
