--- a/css/style.css
+++ b/css/style.css
@@ -7073,7 +7073,7 @@ aside.m-shop-sidebar {
     left: -22rem;
 }
 
-main #content,footer {
+main #content,footer,footer.m-shop-footer {
     padding-left: 0;
   } 
 .primary-content-area{
@@ -7125,7 +7125,7 @@ left:0!important;
   .thunk-quik,.thunk-quickview{
     display:none;
   }
-.right-side footer{
+.right-side footer, .right-side footer.m-shop-footer{
   padding-right:0;
 }
 .mobile-menu-active .header-pan-icon{
